cambios raiz y register

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                     <button type="submit">Ingresar</button>
                     
                     <p class="olv-pass">Has olvidado la Contraseña?</p>
-                    <a href="#">Click Aqui</a>
+                    <a href="/register">Click Aqui</a>
                 </form>
             </div>
         </div>
