cambios en el modal login

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <a class="inicio" href="#">Home</a>
+                <a class="inicio" href="/home">Home</a>
             </div>
             <ul class="nav-links">
                 <li><a href="#">Inicio</a></li>
