Cambios en el login iniciando sesion usuario

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <a class="inicio" href="/home">Home</a>
+                <a class="inicio" href="/home">SPENDBUY</a>
             </div>
             <ul class="nav-links">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Productos</a></li>
                 <li><a href="#">Ofertas</a></li>
                 <li><a href="#">Contacto</a></li>
-                <li class="login"><a href="#">Iniciar Sesión</a></li>
+                <li class="login"><a href="#" id="linkLogin">Iniciar Sesión</a></li>
             </ul>
         </nav>
     </header>
