--- a/public/html/register.html
+++ b/public/html/register.html
@@ -14,7 +14,7 @@
         
         <div class="overlay">
             <p class="login">
-                ¿Ya tienes una cuenta? <a href="#">Inicia sesión</a>
+                ¿Ya tienes una cuenta? <a href="#" id="linkLogin">Inicia sesión</a>
             </p>
             <section class="left-section">
                 <h1>Crear tu cuenta gratuita</h1>
